--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,7 @@
     <string name="explorar">Explorar</string>
     <string name="semana_2">Semana 2</string>
     <string name="contenido_semana_2">Contenido Semana 2</string>
+    <string name="mi_plan_de_entrenamiento">Mi plan de entrenamiento</string>
 
-
-    <style name="AppTheme.NumberPicker" parent="Widget.AppCompat.NumberPicker">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:solidColor">@color/colorNaranja</item>
-    </style>
 
 </resources>
